# Echipa-404-Robotica-

./: README.md  test.txt  test1.txt
actions_quiz/: CMakeLists.txt  package.xml
actions_quiz/action/: DroneCommand404.action
actions_quiz/launch/: drone_command_server_404.launch
actions_quiz/src/: drone_command_server_404.py
services_quiz/: CMakeLists.txt  package.xml
services_quiz/launch/: jackal_circle_full.launch  jackal_circle_server.launch  service_quiz.launch
services_quiz/src/: jackal_circle_client.py  jackal_circle_server.py  service_quiz_client.py  service_quiz_server.py
services_quiz/srv/: JackalCircle.srv  quiz_service.srv
src/: lidar_subscriber.py  navigator.py
topics_quiz/: package.xml
topics_quiz/src/: .simple_topic_publisher.py.swp  script.py  simple_topic_publisher.py  simple_topic_publisher.py.save  simple_topic_publisher.py.save.1  simple_topic_subscriber.py
