<?xml version="1.0"?>
<package format="2">
  <name>actions_quiz</name>
  <version>0.0.1</version>
  <description>Actions quiz</description>

  <maintainer email="aufex1@gmail.com">Echipa-404</maintainer>
  <license>MIT</license>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
  </export>
</package>
